<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <!-- Include the AppBarLayout -->
    <include layout="@layout/appbar" />

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

    <Button
        android:id="@+id/btnNoActionBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_no_actionBar"
        android:padding="20dp"
        android:layout_marginTop="10dp"/>

    <Button
            android:id="@+id/btnToolbar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_toolbar"
            android:padding="20dp"
            android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/btnCollapsingToolbar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_collapsing_toolbar"
        android:padding="20dp"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/btnFloatingToolbar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_floating_toolbar"
        android:padding="20dp"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/btnToolbarCustom"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_toolbar_custom_title"
        android:padding="20dp"
        android:layout_marginTop="10dp"/>

    <!--
        <Button
        android:id="@+id/btnTransparentStatusBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_transparent_status_bar"
        android:padding="20dp"
        android:layout_marginTop="10dp"/> -->

</LinearLayout>

</android.support.design.widget.CoordinatorLayout>